# projects

./: .gitignore
.metadata/: version.ini
GraphPath/: GraphPathCount.cpp  Makefile  MatrixHelper.cpp  MatrixHelper.h  TestDetectBreach.cpp  TestDetectBreach.h  util.h
PhoneNumberGenAlgo/: .PhoneGen.cpp.swp  Algos.h  KnightMoveGenerator.cpp  KnightMoveGenerator.h  Makefile  PhoneGen.cpp  PhoneGen.tar  PhoneNumberGenerator.h  genphno
TSeries/: TSeries.depend  main.cpp
TickDB/: CFieldList.h  CTickRecord.cpp  CTickRecord.h  CTickRepository.cpp  CTickRepository.h  Makefile  TickDB.cpp  TickDB1.cpp  Util.h  readme.txt  tick1.txt
TimeWindow/: a.out  detectBreach.cpp
bsearch/: bsearch  bsearch.cpp
common/: Core.sln  TimeUtil.sln
common/BaseUtil/: BaseUtil.vcxproj  BaseUtil.vcxproj.filters  CMakeLists.txt  ErrorHelper.h  LinuxErrorHelper.cpp  LinuxErrorHelper.h  Win32ErrorHelper.cpp  Win32ErrorHelper.h  ename.c.inc  stdafx.cpp  stdafx.h
common/DataStructures/: BST.h  DataStructures.sln  DataStructures.vcxproj  DataStructures.vcxproj.filters  Heap.h  stdafx.h
common/SortingAlgos/: SortingAlgos.vcxproj  SortingAlgos.vcxproj.filters  stdafx.cpp
common/TimeUtil/: Duration.cpp  Duration.h  DurationGuard.h  TimeUtil.vcxproj  TimeUtil.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
common/interfaces/: IAMDataPublisher.h  IDataListener.h
database/DutchPaymentDB/: DutchPaymentDB.sln  UpgradeLog.htm
database/crickster/: crickster.sln
framework/sockets/: Acceptor.cpp  Acceptor.h  (+7 more)
fseq/: Makefile  README.md  TestSubSequence.cpp  TestSubSequence.h  Util.h
(+68 files in other folders)
